* Tweak - Use admin theme color in selectors.
* Tweak - Refactor `is_valid_pay_for_order_endpoint` for better performance.
* Fix - Catch request failure errors.
* Tweak - Add test mode notice.
* Fix - Remove ugx from the zero decimal currency list as a special case in Stripe.
* Fix - Deleting customer on staging site detaches tokens from customer in Stripe.

= 7.6.1 - 2023-10-17 =
* Fix - Add nonce check to OAuth flow.

= 7.6.0 - 2023-09-14 =
* Fix - PHP fatal error when saving a non-UPE payment method and the Stripe request to retrieve it fails.
* Fix - Missing mapping for formal German (de_DE_formal), Swiss German (de_CH), and informal Swiss German (de_CH_informal) locales for Stripe emails.
* Fix - Set failed order as pre order
* Tweak - Include check during the connect redirect flow.
* Tweak - Skip Apple Pay registration for accounts from India.
* Tweak - Refactor post_meta calls for HPOS compatibility.

= 7.5.0 - 2023-08-10 =
* Fix - Unable to process 0 amount subscription.
* Fix - Resolved an issue that prevented customers using saved `card_` prefixed payment methods on checkout.

= 7.4.2 - 2023-07-31 =
* Fix - Add order key validation for UPE.
* Fix - Enhance query parameters validation in redirected requests.
* Fix - Resolved an issue with orders getting stuck on Pending Payment status when UPE is enabled and customer creates account during checkout.
* Fix - Stripe source and customer tokens not being saved on subscriptions when UPE is enabled and subscription is purchased by guest customer.
* Fix - Make the gateway unavailable when using it in live mode without SSL.
* Fix - Remove Stripe Link PRB when disabled from settings.
* Fix - Lookup existing refunds by refund ID when processing webhooks.
* Fix - Exclude Link from disable UPE confirmation modal in settings.
* Fix - Fix JS (ES5) compatibility on older browsers for the shortcode checkout.

= 7.4.1 - 2023-05-30 =
* Fix - Add Order Key Validation.
* Fix - Add sanitization and escaping some outputs.
